/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package lapr4.red.s3.ipc.n1131106.realtimeworkbook.ui;

import java.awt.Dimension;
import java.awt.Toolkit;
import java.util.ArrayList;
import java.util.Map;
import javax.swing.DefaultListModel;
import javax.swing.JFileChooser;
import javax.swing.JOptionPane;
import lapr4.green.s1.ipc.n1970581.findworkbook.controller.SearchWorkbookController;
import lapr4.green.s1.ipc.n1970581.findworkbook.ui.SearchWorkbookPanel;
import lapr4.red.s3.ipc.n1131106.realtimeworkbook.RealTimeSearch;

/**
 *
 * @author Nuno Filipe 1131106
 */
public class RealTimeSearchUI extends javax.swing.JDialog {

    private final SearchWorkbookController controller;
    private final SearchWorkbookPanel searchWorkbookPanel;
    private final ArrayList<String> list = new ArrayList<String>();
    private DefaultListModel model;

    /**
     * Creates new form RealTimeSearch
     *
     * @param parent Frame
     * @param modal
     * @param controller FindWorkbookController
     * @param searchWorkbookPanel searchWorkbookPanel
     */
    public RealTimeSearchUI(java.awt.Frame parent, boolean modal, SearchWorkbookController controller, SearchWorkbookPanel searchWorkbookPanel) {
        super(parent, modal);
        this.controller = controller;
        this.searchWorkbookPanel = searchWorkbookPanel;
        initComponents();
        putMeOnTheMiddle();
        model = new DefaultListModel();
        rootsList.setModel(model);
        fillFolders();
        setResizable(false);
    }

    private void fillFolders() {
        for (Map.Entry<String, RealTimeSearch> en : searchWorkbookPanel.
                showWbooksFolders().
                entrySet()) {
            if (!model.contains(en.getKey())) {
                model.addElement(en.getKey());
            }
        }

    }

    private void putMeOnTheMiddle() {
        Dimension dim = Toolkit.getDefaultToolkit().getScreenSize();
        this.
                setLocation(dim.width / 2 - this.getSize().width / 2, dim.height / 2 - this.
                        getSize().height / 2);
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        jPanel1 = new javax.swing.JPanel();
        jScrollPane1 = new javax.swing.JScrollPane();
        rootsList = new javax.swing.JList();
        jPanel2 = new javax.swing.JPanel();
        jSeparator1 = new javax.swing.JSeparator();
        searchButton = new javax.swing.JButton();
        addButton = new javax.swing.JButton();
        deleteButton = new javax.swing.JButton();

        setDefaultCloseOperation(javax.swing.WindowConstants.DISPOSE_ON_CLOSE);

        jScrollPane1.setViewportView(rootsList);

        javax.swing.GroupLayout jPanel1Layout = new javax.swing.GroupLayout(jPanel1);
        jPanel1.setLayout(jPanel1Layout);
        jPanel1Layout.setHorizontalGroup(
            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel1Layout.createSequentialGroup()
                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                .addComponent(jScrollPane1, javax.swing.GroupLayout.PREFERRED_SIZE, 263, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addContainerGap())
        );
        jPanel1Layout.setVerticalGroup(
            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel1Layout.createSequentialGroup()
                .addContainerGap(36, Short.MAX_VALUE)
                .addComponent(jScrollPane1, javax.swing.GroupLayout.PREFERRED_SIZE, 253, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addContainerGap())
        );

        searchButton.setText("Search");
        searchButton.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                searchButtonActionPerformed(evt);
            }
        });

        addButton.setText("Add");
        addButton.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                addButtonActionPerformed(evt);
            }
        });

        deleteButton.setText("Delete");
        deleteButton.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                deleteButtonActionPerformed(evt);
            }
        });

        javax.swing.GroupLayout jPanel2Layout = new javax.swing.GroupLayout(jPanel2);
        jPanel2.setLayout(jPanel2Layout);
        jPanel2Layout.setHorizontalGroup(
            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel2Layout.createSequentialGroup()
                .addGap(0, 0, Short.MAX_VALUE)
                .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
                    .addComponent(addButton, javax.swing.GroupLayout.PREFERRED_SIZE, 72, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addComponent(deleteButton, javax.swing.GroupLayout.PREFERRED_SIZE, 72, javax.swing.GroupLayout.PREFERRED_SIZE))
                .addGap(43, 43, 43))
            .addGroup(jPanel2Layout.createSequentialGroup()
                .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addGroup(jPanel2Layout.createSequentialGroup()
                        .addGap(18, 18, 18)
                        .addComponent(jSeparator1, javax.swing.GroupLayout.PREFERRED_SIZE, 123, javax.swing.GroupLayout.PREFERRED_SIZE))
                    .addGroup(jPanel2Layout.createSequentialGroup()
                        .addGap(37, 37, 37)
                        .addComponent(searchButton, javax.swing.GroupLayout.PREFERRED_SIZE, 86, javax.swing.GroupLayout.PREFERRED_SIZE)))
                .addContainerGap(18, Short.MAX_VALUE))
        );
        jPanel2Layout.setVerticalGroup(
            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel2Layout.createSequentialGroup()
                .addGap(62, 62, 62)
                .addComponent(addButton, javax.swing.GroupLayout.PREFERRED_SIZE, 32, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addGap(45, 45, 45)
                .addComponent(deleteButton, javax.swing.GroupLayout.PREFERRED_SIZE, 31, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                .addComponent(jSeparator1, javax.swing.GroupLayout.PREFERRED_SIZE, 10, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addComponent(searchButton, javax.swing.GroupLayout.PREFERRED_SIZE, 35, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addGap(16, 16, 16))
        );

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
        getContentPane().setLayout(layout);
        layout.setHorizontalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
                .addContainerGap()
                .addComponent(jPanel2, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addComponent(jPanel1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
        );
        layout.setVerticalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addComponent(jPanel1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
            .addComponent(jPanel2, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
        );

        pack();
    }// </editor-fold>//GEN-END:initComponents

    private void addButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_addButtonActionPerformed
        JFileChooser fileC = new JFileChooser();
        fileC.setDialogTitle("Select Folder to search workbooks");
        String path = null;
        boolean flag = false;
        int i; //vai procurar apenas por directorios
        fileC.setFileSelectionMode(JFileChooser.DIRECTORIES_ONLY);
        fileC.setApproveButtonText("Search");
        if (fileC.showOpenDialog(null) == JFileChooser.APPROVE_OPTION) {
            path = fileC.getSelectedFile().getAbsolutePath();
            if (rootsList.getModel().getSize() == 0) {
                model.addElement(path);
                list.add(path);
            } else {
                for (i = 0; i < model.getSize(); i++) {
                    Object o = model.getElementAt(i);
                    if (o.toString().equalsIgnoreCase(path)) {
                        JOptionPane.
                                showMessageDialog(this, "The folder was already selected !", "Add folders", JOptionPane.INFORMATION_MESSAGE);
                        flag = true;
                    }
                }
                if (flag == false) {
                    model.addElement(path);
                    rootsList.validate();
                    rootsList.repaint();
                    list.add(path);

                }
            }
        }
    }//GEN-LAST:event_addButtonActionPerformed


    private void deleteButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_deleteButtonActionPerformed
        int selectedIndex = rootsList.getSelectedIndex();
        String delete = (String) rootsList.getSelectedValue();
        if (selectedIndex != -1) {
            list.remove(delete);
            model.remove(selectedIndex);
            for (Map.Entry<String, RealTimeSearch> en : searchWorkbookPanel.
                    showWbooksFolders().entrySet()) {
                if (en.getKey().equalsIgnoreCase(delete)) {
                    en.getValue().cancelTimer();
                }
            }
            searchWorkbookPanel.showWbooksFolders().remove(delete);
        } else {
            JOptionPane.
                    showMessageDialog(this, "To delete, select one folder !", "Delete folder", JOptionPane.INFORMATION_MESSAGE);
        }
    }//GEN-LAST:event_deleteButtonActionPerformed

    private void searchButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_searchButtonActionPerformed

        rootsList.validate();
        rootsList.repaint();
        if (list.isEmpty() || rootsList.getModel().getSize() == 0) {
            JOptionPane.
                    showMessageDialog(this, "Please add new folders to search !", "Search folders", JOptionPane.INFORMATION_MESSAGE);
        } else {
            dispose();
            for (String s : list) {
                RealTimeSearch rs = new RealTimeSearch(controller, s, searchWorkbookPanel);
                Thread th = new Thread(rs);
                searchWorkbookPanel.showWbooksFolders().put(s, rs);
                th.run();

                try {
                    th.join();
                } catch (InterruptedException ex) {
                    JOptionPane.showMessageDialog(
                            null,
                            ex,
                            "Error",
                            JOptionPane.ERROR_MESSAGE
                    );
                } catch (Exception e) {
                    System.out.println("Error");
                }
            }

        }

    }//GEN-LAST:event_searchButtonActionPerformed

    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JButton addButton;
    private javax.swing.JButton deleteButton;
    private javax.swing.JPanel jPanel1;
    private javax.swing.JPanel jPanel2;
    private javax.swing.JScrollPane jScrollPane1;
    private javax.swing.JSeparator jSeparator1;
    private javax.swing.JList rootsList;
    private javax.swing.JButton searchButton;
    // End of variables declaration//GEN-END:variables

}
